--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
       <groupId>org.cloudhoist</groupId>
       <artifactId>pallet-common</artifactId>
       <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
