--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
       <version>0.1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>midje</groupId>
+      <artifactId>midje</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <optional>true</optional>
