--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,7 @@
       <groupId>midje</groupId>
       <artifactId>midje</artifactId>
       <version>1.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
