--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
+      <version>${clojure.version}</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
@@ -164,6 +165,12 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>clojure-1.3</id>
+      <properties>
+        <clojure.version>1.3.0-beta1</clojure.version>
+      </properties>
+    </profile>
   </profiles>
 
   <developers>
@@ -191,4 +198,7 @@
     </repository>
   </repositories>
 
+  <properties>
+    <clojure.version>1.2.0</clojure.version>
+  </properties>
 </project>
