--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
     <groupId>org.cloudhoist</groupId>
     <artifactId>pallet-pom</artifactId>
     <version>0.7.1-SNAPSHOT</version>
-    <relativePath>../pallet-pom/pom.xml</relativePath>
   </parent>
   <groupId>org.cloudhoist</groupId>
   <artifactId>stevedore</artifactId>
@@ -25,43 +24,15 @@
   </scm>
 
   <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <resources>
-      <resource>
-        <directory>resources</directory>
-        <excludes>
-          <exclude>filtered/*</exclude>
-        </excludes>
-      </resource>
-      <resource>
-        <directory>resources/filtered</directory>
-        <filtering>true</filtering>
-      </resource>
-    </resources>
-    <testResources>
-      <testResource>
-        <directory>test-resources</directory>
-      </testResource>
-    </testResources>
     <plugins>
-      <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>test-jar</id>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.cloudhoist.plugin</groupId>
         <artifactId>zi</artifactId>
         <configuration>
-          <autodocTargetDirectory>doc/autodoc</autodocTargetDirectory>
-          <marginaliaTargetDirectory>doc/marginalia</marginaliaTargetDirectory>
+          <codoxTargetDirectory>doc/api/${stevedore.doc.version}</codoxTargetDirectory>
+          <codoxApiVersion>${stevedore.doc.version}</codoxApiVersion>
+          <codoxWriter>codox-md.writer/write-docs</codoxWriter>
+          <marginaliaTargetDirectory>doc</marginaliaTargetDirectory>
         </configuration>
       </plugin>
     </plugins>
@@ -71,7 +42,6 @@
     <dependency>
       <groupId>org.clojure</groupId>
       <artifactId>clojure</artifactId>
-      <version>${clojure.version}</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
@@ -84,75 +54,24 @@
     <dependency>
       <groupId>org.cloudhoist</groupId>
       <artifactId>pallet-common</artifactId>
-      <version>0.2.1</version>
+      <version>0.2.2</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-core</artifactId>
-      <optional>true</optional>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <optional>true</optional>
-      <scope>test</scope>
-    </dependency>
-    <!-- <dependency> -->
-    <!--   <groupId>autodoc</groupId> -->
-    <!--   <artifactId>autodoc</artifactId> -->
-    <!--   <optional>true</optional> -->
-    <!-- </dependency> -->
-    <dependency>
-      <groupId>marginalia</groupId>
-      <artifactId>marginalia</artifactId>
-      <optional>true</optional>
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <profiles>
-    <profile>
-      <id>distribution</id>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-jar-plugin</artifactId>
-            <configuration>
-              <excludes>
-                <exclude>log4j.xml</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>clojure-1.3</id>
-      <properties>
-        <clojure.version>1.3.0</clojure.version>
-      </properties>
-    </profile>
-  </profiles>
-
-  <developers>
-    <developer>
-      <name>Hugo Duncan</name>
-      <id>hugoduncan</id>
-      <email>hugo -at- hugoduncan -dot- org</email>
-      <roles>
-        <role>PMC</role>
-        <role>Developer</role>
-      </roles>
-      <timezone>-5</timezone>
-    </developer>
-  </developers>
 
   <!-- make sure we can find the parent pom -->
   <repositories>
@@ -164,14 +83,9 @@
       <name>Sonatype Nexus Releases</name>
       <url>http://oss.sonatype.org/content/repositories/releases</url>
     </repository>
-    <repository>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Sonatype Nexus Snapshots</name>
-      <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-    </repository>
   </repositories>
 
+  <properties>
+    <stevedore.doc.version>0.7</stevedore.doc.version>
+  </properties>
 </project>
