--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-doc
-target
-logs
+/target
+/lib
+/classes
+/checkouts
+/logs
+/doc
+doc-src/VERSIONS.md
+doc-src/INTRO.md
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+.lein-deps-sum
+.lein-failures
+.lein-plugins
+.lein-repl-history
